# PIco-calc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fontgen.py  ime.cpp  ime.hpp  moonbench3x5.h
src/: application.cpp  application.hpp  ereader.cpp  ereader.hpp  ereader_test.cpp  ime.cpp  ime.hpp  render_server.cpp  render_server.hpp  ssd1306_driver.cpp  ssd1306_driver.hpp  sysinfo.cpp  sysinfo.hpp  test_ereader.cpp  test_sysinfo.cpp
src/display/: CMakeLists.txt  MoonBench4x8.h  fontgen.py  render_server.cpp  render_server.hpp  ssd1306_driver.cpp  ssd1306_driver.hpp  test.cpp
src/display/font/: MoonBench5x8Variable.h  fontgen.py
src/e_reader/: book.h  ereader.cpp  ereader.hpp  hamlet.h  txt2cpp.py
src/e_reader/textwrap/: txt2cpp.py  wrapper.py
src/e_reader/textwrap/input/: hamlet.txt
src/font/: fontgen.py
src/image_viewer/: gallery.h  png2cpp.py
src/image_viewer/picture/: gallery.h  png2Cint8.py  png2cpp.py
src/image_viewer/picture/output/: 3x4_worm.h  bad_joke.h  beep.h  begin.h  bio.h  bookshelf.h  catbooting.h  catbush.h  catheads.h  catkittycat.h  cats2.h  cats3.h  catscan.h  chart1.h  city.h  clock1.h  clouds.h  communication.h  discover.h  experience.h  fuel.h  game2.h  gamescreen1.h  getit.h  glitch.h  hexagon.h  menu1.h  minigame1.h  minigame10.h  minigame2.h  minigame3.h  minigame4.h  minigame5.h  minigame6.h  minigame7.h  minigame8.h  minigame9.h  mount.h  oledlogo2.h  pfft.h  (+9 more)
test/display/: CMakeLists.txt  display.cpp
test/keypad/: CMakeLists.txt  keypad.c  keypad.elf  keypad.uf2
test/keypad/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
test/keypad/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
tool/convertpng/: png2Cint8.py
tool/font/: fontgen.py
tool/textwrap/: vietnamese-ascii.py  wrapper.py
